src/tests/ci/assignment_6_advanced_features/valid/11_struct_member_pointer_int_warning.c
struct Holder {
    int* ptr;
};

int main() {
    struct Holder h;

    h.ptr = 5;

    return 0;
}