src/tests/ci/assignment_6_advanced_features/invalid_semantic/09_arrow_on_non_pointer.c
struct Point {
    int x;
};

int main() {
    struct Point p;

    return p->x;
}